Add style to main for flex and change direction

--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@ body {
     align-items: center;
     flex: 1 1 0;
 }
+.main-container {
+    width: 320px;
+    height: 490px;
+    display: flex;
+    background-color: rgb(56, 53, 53);
+    flex-direction: column;
+    padding: 5px;
+    box-sizing: border-box;
+    margin-top: 10%;
+}
