--- a/style.css
+++ b/style.css
@@ -15,3 +15,16 @@ body {
     box-sizing: border-box;
     margin-top: 10%;
 }
+.container {
+    width: 306px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0;
+    margin: 0;
+    flex-wrap: wrap;
+    gap: 2px;
+    border: solid rgb(56, 53, 53) 3px;
+    flex: 1 1 0;
+}
